--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
     </section>
 
-    <section class="py-16">
+    <section class="bg-white pt-20 pb-16">
         <div class="container flex flex-col px-5 md:px-3 lg:flex-row lg:space-x-10 lg:px-0">
             <div class="w-full lg:w-[45%]">
                 <img src="images/gardens.jpg" alt="about" class="w-full bg-customDark drop-shadow-md rounded-md">
@@ -185,6 +185,109 @@
                         <i class="fa-sharp fa-solid fa-arrow-right text-sx ml-2"></i>
                     </a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-16">
+        <div class="container">
+            <div class="text-center">
+                <h3 class="text-3xl font-bold">Popular <span class="text-primary">Courses</span></h3>
+            </div>
+
+
+            <div class="my-10 grid grid-cols-3 gap-5" aria-label="A courses couresel">
+                <div class="group bg-white drop-shadow rounded-t-md transition hover:shadow-lg">
+                    <div>
+                        <img src="images/Slide11.JPG" alt="course-1" class="rounded-t-md h-[280px] w-full">
+                    </div>
+                    <div class="p-5">
+                        <h2 class="text-lg font-semibold uppercase">Diploma In Journalism</h2>
+                        <div class="mt-3 space-y-1.5">
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Training department: </span>
+                                <span class="font-light text-gray-500">Information Training</span>
+                            </h6>
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Examiner: </span>
+                                <span class="font-light text-gray-500">KIMC</span>
+                            </h6>
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Duration: </span>
+                                <span class="font-light text-gray-500">Three Years</span>
+                            </h6>
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Intakes: </span>
+                                <span class="font-light text-gray-500">September</span>
+                            </h6>
+                        </div>
+                        <div class="mt-5">
+                            <a href="#" class="bg-primary text-white px-4 py-1.5">Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="group bg-white drop-shadow rounded-t-md transition hover:shadow-lg">
+                    <div>
+                        <img src="images/Slide11.JPG" alt="course-1" class="rounded-t-md h-[280px] w-full">
+                    </div>
+                    <div class="p-5">
+                        <h2 class="text-lg font-semibold uppercase">Diploma In Journalism</h2>
+                        <div class="mt-3 space-y-1.5">
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Training department: </span>
+                                <span class="font-light text-gray-500">Information Training</span>
+                            </h6>
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Examiner: </span>
+                                <span class="font-light text-gray-500">KIMC</span>
+                            </h6>
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Duration: </span>
+                                <span class="font-light text-gray-500">Three Years</span>
+                            </h6>
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Intakes: </span>
+                                <span class="font-light text-gray-500">September</span>
+                            </h6>
+                        </div>
+                        <div class="mt-5">
+                            <a href="#" class="bg-primary text-white px-4 py-1.5">Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="group bg-white drop-shadow rounded-t-md transition hover:shadow-lg">
+                    <div>
+                        <img src="images/Slide11.JPG" alt="course-1" class="rounded-t-md h-[280px] w-full">
+                    </div>
+                    <div class="p-5">
+                        <h2 class="text-lg font-semibold uppercase">Diploma In Journalism</h2>
+                        <div class="mt-3 space-y-1.5">
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Training department: </span>
+                                <span class="font-light text-gray-500">Information Training</span>
+                            </h6>
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Examiner: </span>
+                                <span class="font-light text-gray-500">KIMC</span>
+                            </h6>
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Duration: </span>
+                                <span class="font-light text-gray-500">Three Years</span>
+                            </h6>
+                            <h6 class="text-sm">
+                                <span class="font-semibold">Intakes: </span>
+                                <span class="font-light text-gray-500">September</span>
+                            </h6>
+                        </div>
+                        <div class="mt-5">
+                            <a href="#" class="bg-primary text-white px-4 py-1.5">Apply</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-5">
+                <a href="#" class="bg-primary text-lightGray px-4 py-3 hover:bg-darkBlue">View More</a>
             </div>
         </div>
     </section>
